--- a/Roqs/Roqs/MainWindow.xaml
+++ b/Roqs/Roqs/MainWindow.xaml
@@ -5,8 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Roqs"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" Closing="Window_Closing"
+        WindowStartupLocation="CenterScreen">
     <Grid>
-        
+        <Canvas >
+            <Rectangle Fill="Red" Width="50" Height="75"></Rectangle>
+        </Canvas>
+
     </Grid>
 </Window>
